--- a/tasks/templates/signup.html
+++ b/tasks/templates/signup.html
@@ -1,9 +1,11 @@
 <h1>Signup</h1>
 
-<form action="" method="post">
+<form method="post">
     <!-- Llave de seguridad -->
     {% csrf_token %}
 
     <!-- Formulario -->
     {{ forms.as_p }}
+    <button>Guardar</button>
 </form>
+<h3>{{ error }}</h3>
