--- a/tasks/templates/task.html
+++ b/tasks/templates/task.html
@@ -2,9 +2,13 @@
 
 {% block content %}
 
-<h1>{{task.title}}</h1>
+<form method="POST">
+    {% csrf_token %}
 
-<h2>{{task.description}}</h2>
+    {{form.as_p}}
+
+    <button>Actualizar</button>
+</form>
 
 
 {% endblock content %}
