Add steps and code to update a data in backend

--- a/tasks/templates/task.html
+++ b/tasks/templates/task.html
@@ -9,6 +9,15 @@
 
     <button>Actualizar</button>
 </form>
+
+<form action="{% url 'task_complete' task.id %}" method="post">
+    {% csrf_token %}
+    <button>Completada</button>
+</form>
+
+<form>
+    <button>Eliminar</button>
+</form>
 {{text}}
 
 {% endblock content %}
