Add steps and code to delete a task

--- a/tasks/templates/task.html
+++ b/tasks/templates/task.html
@@ -15,7 +15,8 @@
     <button>Completada</button>
 </form>
 
-<form>
+<form action="{% url 'task_delete' task.id %}" method="post">
+    {% csrf_token %}
     <button>Eliminar</button>
 </form>
 {{text}}
